Refactor embeddings and add input loop
- allow multiple document types as source data
- user can now prompt inside a terminal session

--- a/example.env
+++ b/example.env
@@ -1,1 +1,3 @@
-OPENAI_API_KEY = 'replace-with-openai-api-key'
+OPENAI_API_KEY='replace-with-openai-api-key'
+PERSIST_DIRECTORY=db
+INPUT_DIRECTORY=raw_data
