--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,13 @@ attrs==23.1.0
 backoff==2.2.1
 bitsandbytes==0.38.1
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 chromadb==0.3.22
 click==8.1.3
 clickhouse-connect==0.5.24
 cmake==3.26.3
+cryptography==40.0.2
 dataclasses-json==0.5.7
 duckdb==0.7.1
 fastapi==0.95.1
@@ -56,9 +58,11 @@ openai==0.27.6
 openapi-schema-pydantic==1.2.4
 packaging==23.1
 pandas==2.0.1
+pdfminer.six==20221105
 Pillow==9.5.0
 posthog==3.0.1
 psutil==5.9.5
+pycparser==2.21
 pydantic==1.10.7
 pypdf==3.8.1
 pyre-extensions==0.0.23
